pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl3.mof
/* No flavors defined. Per ABNF at least one keyword MUST exist */
Qualifier Abstract : boolean = false, 
    Scope(class, association, indication), 
    Flavor();
